# https_server

./: CMakeLists.txt  Makefile  selfsigned.crt
inc/: http_request.h  https_server.h
src/: http_request.cpp  https_server.cpp  main.cpp
